@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 ecea26dca319967c81a1a9bb7e96e3a4 epix-0.8.10a-r1.ebuild 1527
 MD5 bbc3f6c8281ebfa802f7d60778105393 epix-1.0.0.ebuild 1299
-MD5 76c75a9cee02645fcb2c3a97054554f0 ChangeLog 1715
+MD5 96c07cc2081a78828066362d108aea48 ChangeLog 1815
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
 MD5 978e21d695848341b116f070137c4a50 files/digest-epix-1.0.0 72
-MD5 dc26ec6bc48dee7ffacbe02626c03b78 files/digest-epix-0.8.10a-r1 74
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.2.6 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCBAOlntT9W3vfTuoRAjWNAKCAREK+/hjZDIznF0Ojxr6MOGSoXACffUjM
-H0YP1g92p1jo0oPQU7RYlaY=
-=x5mU
+iD8DBQFCWGWLntT9W3vfTuoRAp4BAKCQ4T0XvZvtUY2jIBHW44ekbshRygCgqI0k
+RYGHe01ZQZdmk2N4EGLE6s8=
+=F+yf
 -----END PGP SIGNATURE-----
