@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/epix
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/epix/ChangeLog,v 1.3 2005/02/04 23:22:30 cryos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/epix/ChangeLog,v 1.4 2005/04/09 23:30:02 cryos Exp $
+
+  09 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> -epix-0.8.10a-r1.ebuild:
+  Removed old ebuild.
 
   04 Feb 2005; Marcus D. Hanwell <cryos@gentoo.org> epix-1.0.0.ebuild:
   Marked stable on amd64 and x86.
